# contextlake

./: .contextlake.ini.example  .dockerignore  .gitignore  .gitlab_sync.ini.example  404.html  BRANDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  benchmarks.html  bootstrap.html  brand.html  changelog.html  cli-reference.html  config.py  configuration.html  connect-enrich.html  console-output.html  contextlake.py  core.py  dashboard.html  design-variant-cinematic.html  design-variant-editorial.html  design-variant-kinetic.html  docs.css  docs.html  generate-wiki.html  gitlab_sync.py  graph-embed.html  index-code-graph.html  index.html  internals.html  knowledge-layer.html  llms.txt  (+17 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docker/: prefetch_models.py
docs/: benchmarks.md  bootstrap.md  brand.md  cli-reference.md  configuration.md  connect-enrich.md  console-output.md  dashboard.md  generate-wiki.md  index-code-graph.md  internals.md  knowledge-layer.md  model-providers.md  ownership.md  releasing.md  semantic-search.md  serve.md  storage.md  style-guide-formatting.md  style-guide-reference.md  style-guide-structure.md  style-guide-voice.md  style-guide.md  usage.md  visualize.md
docs/branding/: mascot.md
examples/: contextlake.service  contextlake.timer  gitlab-sync.service  gitlab-sync.timer  kb.toml.example
examples/fixtures/: golden-queries.json  sample-graph.json
site/: .gitignore  README.md  build_docs.py  deploy.sh  docs.css  fonts.css  graph-embed.html  index.html  llms.txt  manifest.webmanifest  sitemap.xml
site/tools/: gen_diagrams.py  gen_flows.py  gen_icons_final.py  gen_small_mark.py  gen_trees.py
src/contextlake/: __init__.py  __main__.py  cli.py  config.py  core.py  init_cmd.py  logging_setup.py  metrics.py  safety.py  style.py
src/contextlake/kb/: __init__.py  _util.py  c4.py  commands.py  config.py  config_edit.py  eval.py  git_hook.py  hcl.py  ids.py  impact.py  lock.py  manifest.py  mcp_client.py  ownership.py  parse.py  references.py  router.py  server.py  source_cmd.py  sql.py  state.py  visualize.py
src/contextlake/kb/arch/: __init__.py  resolve.py
src/contextlake/kb/connectors/: atlassian.py  common.py  enrich.py  gitlab.py  mcp_query.py  orchestrate.py
src/contextlake/kb/dashboard/: __init__.py  data.py  server.py  site.py
src/contextlake/kb/dashboard/fixtures/: sample-dashboard.json
src/contextlake/kb/dashboard/static/: dashboard.css  dashboard.html  dashboard.js
src/contextlake/kb/embeddings/: base.py  builtin.py  hybrid.py  index.py  ollama.py  openai.py  store.py
src/contextlake/kb/flow/: __init__.py  events.py  http.py  web.py
src/contextlake/kb/llm/: __init__.py  anthropic.py  base.py  builtin.py  cli.py  ollama.py  openai.py
src/contextlake/kb/sources/: __init__.py  api.py  base.py  files.py  mcp.py  web.py
src/contextlake/kb/static/: README.md  app.css  app.js
src/contextlake/kb/steer/: __init__.py  generate.py
src/contextlake/kb/store/: __init__.py  base.py  sqlite_store.py
src/contextlake/kb/wiki/: cluster.py  council.py  generate.py
src/gitlab_sync/: __init__.py  __main__.py  cli.py  config.py  core.py  logging_setup.py  safety.py  style.py
src/gitlab_sync/kb/: __init__.py  commands.py  config.py  mcp_client.py  model.py  parse.py  security.py  server.py
src/gitlab_sync/kb/connectors/: __init__.py  atlassian.py  figma.py  orchestrate.py
src/gitlab_sync/kb/embeddings/: __init__.py  base.py  openai.py  store.py
src/gitlab_sync/kb/llm/: base.py  ollama.py  openai.py
src/gitlab_sync/kb/steer/: generate.py  skills.py
src/gitlab_sync/kb/store/: base.py  shards.py  sqlite_store.py
src/gitlab_sync/kb/wiki/: __init__.py  generate.py
tests/: conftest.py  test_branches.py  test_cli_overrides.py  test_clone.py  test_config.py  test_init.py  test_logging.py  test_metrics.py  test_orchestration.py  test_progress.py  test_resilience.py  test_safety.py  test_status_summary.py  test_style.py  test_style_helpers.py  test_update.py  test_verify_fetch.py
tests/kb/: test_config.py  test_config_edit.py  test_dashboard_data.py  test_dashboard_server.py  test_dashboard_site.py  test_eval.py  test_flow_events.py  test_flow_http.py  test_flow_web.py  test_genericity_guard.py  test_git_hook.py  test_graph_command.py  test_ids_security.py  test_kb_bitemporal.py  test_kb_bootstrap.py  test_kb_c4.py  test_kb_cluster_wiki.py  test_kb_commands.py  test_kb_config.py  test_kb_connect_cmd.py  test_kb_connectors.py  test_kb_embed_index.py  test_kb_embeddings.py  test_kb_enrich.py  test_kb_enrich_cmd.py  test_kb_figma.py  test_kb_gitlab.py  test_kb_hcl.py  test_kb_hybrid.py  test_kb_ids_security.py  test_kb_impact.py  test_kb_incremental_lint.py  test_kb_llm.py  test_kb_manifest.py  test_kb_mcp_client.py  test_kb_mcp_query.py  test_kb_model.py  test_kb_openai_providers.py  test_kb_ownership.py  test_kb_parse.py  (+19 more)
