[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contextlake"
version = "2.34.0"
description = "A local context layer for AI tools: mirror your repositories, index them into a knowledge graph, and serve it over MCP so agents answer from real source instead of guessing."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "Sayak Sarkar", email = "sayak.bugsmith@gmail.com" }]
keywords = ["context", "knowledge-graph", "mcp", "ai", "code-search",
            "gitlab", "git", "mirror", "cli", "glab", "workspace",
            "offline-first", "semantic-search", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Version Control :: Git",
]
# Runtime depends only on the Python standard library plus the external
# `git` and `glab` command-line tools (not pip-installable).
dependencies = []

[project.urls]
Homepage = "https://sayak.in/contextlake"
Documentation = "https://sayak.in/contextlake/docs.html"
Repository = "https://github.com/sayak-sarkar/contextlake"
Issues = "https://github.com/sayak-sarkar/contextlake/issues"
Changelog = "https://github.com/sayak-sarkar/contextlake/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]
# Tools for cutting a release (build the dist, validate + upload to PyPI).
# See docs/releasing.md.
release = ["build>=1.0", "twine>=5.0"]
# Optional knowledge-layer subsystem (contextlake.kb). Note: `mcp` requires
# Python >= 3.10, so this extra's floor is 3.10 while the core tool stays 3.9+.
kb = [
    "mcp>=1.28", "pydantic>=2", "tomli; python_version<'3.11'",
    # Code parsing: the tree-sitter runtime plus per-language grammar packages
    # (added incrementally as languages are supported).
    "tree-sitter>=0.25", "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23", "tree-sitter-typescript>=0.23",
    "tree-sitter-c-sharp>=0.23",
]
# Optional ANN backend for the semantic tier. Without it the vector store falls
# back to an exact pure-Python cosine scan (no native dependency required).
kb-vec = ["sqlite-vec>=0.1"]
# Optional built-in, CPU-only EMBEDDER so the semantic tier works with no Ollama
# and no API key. Static model2vec embeddings (~30MB, auto-downloaded on first
# use); numpy inference, no onnxruntime. See docs/knowledge-layer.md.
kb-local = ["model2vec>=0.3", "huggingface_hub>=0.20"]
# Optional higher-quality built-in embedder engine (ONNX bge-small via fastembed,
# ~90MB). Heavier than kb-local; selected with `engine = "fastembed"`.
kb-fastembed = ["fastembed>=0.3"]
# One-step "everything for local semantic search" convenience extra: the knowledge
# layer + the built-in CPU embedder + the sqlite-vec ANN backend. Install this when
# you want index -> embed -> semantic search to just work, with no Ollama or API key.
kb-full = ["contextlake[kb]", "contextlake[kb-local]", "contextlake[kb-vec]"]
# Optional built-in, CPU-only generative LLM for the wiki tier (no Ollama / API
# key). Small auto-downloaded GGUF via llama-cpp-python. Heavier + slow on CPU;
# off by default. See docs/knowledge-layer.md.
llm-local = ["llama-cpp-python>=0.2", "huggingface_hub>=0.20"]

[project.scripts]
contextlake = "contextlake.cli:main"
# Deprecated alias for the former package name (gitlab-sync); kept so existing
# installs and scripts that call `gitlab-sync` keep working. Removed in a future major.
gitlab-sync = "contextlake.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Vendored cytoscape.js + the extracted app.css/app.js for the offline
# `contextlake graph` HTML. Without this the wheel silently omits them.
"contextlake.kb" = ["static/*.js", "static/*.css"]
# Dashboard SPA shell + assets (html/js/css) for `contextlake dashboard`, plus the
# bundled demo-fleet fixture behind `--sample` (must reach pip/wheel installs).
"contextlake.kb.dashboard" = ["static/*", "fixtures/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]
# site/ is the website build tooling (page generator + one-off SVG/icon asset
# scripts), not part of the shipped package; CI lints only `src tests`.
extend-exclude = ["site"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# visualize.py inlines large base64 assets (the brand glyph, the empty-state image)
# directly into the generated graph page so it stays fully self-contained and offline;
# those data-URI lines exceed the line length by design and can't be wrapped.
"src/contextlake/kb/visualize.py" = ["E501"]
